--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 					<br />
 					Bakket op af &nbsp;&nbsp;<a href="http://nodejs.org/"><img src="/img/logo_node.png" /></a>&nbsp;&nbsp;
 					<br />
-					Leveret af &nbsp;&nbsp;<a href="https://www.heroku.com/"><img src="/img/logo_heroku.png" /></a>
+					Leveret på &nbsp;&nbsp;<a href="https://www.heroku.com/"><img src="/img/logo_heroku.png" /></a>
 					<br />
 					<a href="https://github.com/sorenkrabbe/markusKonf">Kontroller kildekoden på GitHub</a>
 				</p>
